--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Shivans Awasthi Website</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
 
 <link rel="stylesheet" href="./styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +40,7 @@
 </div> -->
 <section id="Intro">
 
-
+<div class="container">
 <div class="media"  >
 
     <div class="img">
@@ -47,7 +50,7 @@
     </div>
   
     <div class="content">
-        <p>I am<br><span class="hname" > Shivans Awasthi </span><br><br> A Programmer </p>
+        <p>I am<br><span class="hname" > Shivans Awasthi </span><br><br> A &nbsp </b><span  class="typewrite" data-period="2000" data-type='[ "Programmer", "Software Engineer", "Full Stack Web Developer", "Robotics Engineer" ]'></span></p>
     </div>
     <div class="footer">
       <div class="introbuttons">
@@ -56,7 +59,7 @@
       </div>
     </div>
   </div>
-
+</div>
 </section>
 
 
@@ -84,10 +87,58 @@
     <a class="footer-link" href="https://www.linkedin.com/in/angela-yu-963a584b/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/yu_angela">Twitter</a>
     <a class="footer-link" href="https://www.appbrewery.com/">Website</a>
-    <p class="copyright">© Angela Yu @ The App Brewery.</p>
+    <h3>&#169 Shivan Awasthi </h3>
   </div> -->
 
 
+
+
+
+
+  <div class="footer-dark">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3 item">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#">Web design</a></li>
+                        <li><a href="#">Development</a></li>
+                        <li><a href="#">Hosting</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-3 item">
+                    <h3>About</h3>
+                    <ul>
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Team</a></li>
+                        <li><a href="#">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 item text">
+                    <h3>Company Name</h3>
+                    <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
+                </div>
+                <!-- <div class="col item social"><a href="#"><i class="icon ion-social-facebook" aria-hidden="true"></i>Facebook</a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div> -->
+                <div class="col-sm-6 col-md-4 item social">
+                  <h3>Social Links</h3>
+                  <ul class="social_links">
+                      <li><a href="#" class="solid-dark-button"><i class="icon ion-social-facebook" aria-hidden="true"></i> Facebook</a></li>
+                      <li><a href="#" class="solid-dark-button"><i class="icon ion-social-twitter" aria-hidden="true"></i> Twitter</a></li>
+                      <li><a href="#" class="solid-dark-button"><i class="icon ion-social-linkedin" aria-hidden="true"></i> Linkedin</a></li>
+                  </ul>
+              </div>
+            
+              </div>
+            <p class="copyright">Company Name © 2018</p>
+        </div>
+    </footer>
+</div>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 <script src="./script.js"></script>
 
 
