navbar toggle update

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark " style="background-color: #010409; font-family: Merriweather Sans " >
     <a class="navbar-brand" style="font-family: Merriweather Sans ;"  href="#">Shivans-Awasthi</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" style="border: none;" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <ion-icon name="reorder-three-outline" style="color: #ffffff;" ></ion-icon>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
