--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark " style="background-color: #010409; font-family: Merriweather Sans " >
     <a class="navbar-brand" style="font-family: Merriweather Sans ;"  href="#">Shivans-Awasthi</a>
     <button class="navbar-toggler" style="border: none;" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <ion-icon name="reorder-three-outline" style="color: #ffffff;" ></ion-icon>
+      <ion-icon name="menu" style="color: #ffffff;" ></ion-icon>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
