added education and projects section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <section id="intro">
 <br><br>
 
-<div class="jumbotron jumbotron-fluid" style="background-color: #121922;">
+<div class="jumbotron jumbotron-fluid" style="background-color: #121922; padding: 50px 20px 20px 30px; ">
   <div class="container">
 <div class="row">
   <div class="col-sm-12 col-md-5">
@@ -62,7 +62,7 @@
       <img src="./images/me-PhotoRoom.png-PhotoRoom.png" alt="Its Me" height="400" width="400">
     </div>
   </div>
-  <div class="col-sm-12 col-md-6">
+  <div class="col-sm-12 col-md-6" style="padding: 50px 20px 20px 30px">
     <div class="content">
       <h1 class="display-4">I am <span class="badge badge-secondary">Shivans Awasthi</span></h1><br><br><p class="lead"> A &nbsp<span  class="typewrite" data-period="2000" data-type='[ "Programmer", "Software Engineer", "Full Stack Web Developer", "Robotics Engineer" ]'></span></p>
   </div>
@@ -129,16 +129,16 @@
 <div class="col-sm-12 col-md-6" style="background-color: #121922; font-family: Merriweather Sans ;">
   <ul class="list-group" >
     <li class="list-group-item" style="background-color:#010409; color:#ffffff; font-size:large;">Technical Skills</li>
-    <li class="list-group-item" style="background-color:#121922; color:#ffffff; font-size:large;" ><ion-icon name="code-slash"></ion-icon>  C/C++,<ion-icon name="logo-python"></ion-icon>  Python<div class="progress">
+    <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="code-slash"></ion-icon>  C/C++,<ion-icon name="logo-python"></ion-icon>  Python<div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
     </div></li>
-    <li class="list-group-item" style="background-color:#121922; color:#ffffff; font-size:large;" ><ion-icon name="logo-react"></ion-icon>  MERN Stack<div class="progress">
+    <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="logo-react"></ion-icon>  MERN Stack<div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
     </div></li>
-    <li class="list-group-item" style="background-color:#121922; color:#ffffff; font-size:large;" ><ion-icon name="file-tray-stacked"></ion-icon>  PostgreSQL, My SQL<div class="progress">
+    <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="file-tray-stacked"></ion-icon>  PostgreSQL, My SQL<div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
     </div></li>
-    <li class="list-group-item" style="background-color:#121922; color:#ffffff; font-size:large;" ><ion-icon name="apps"></ion-icon> ROS2<div class="progress">
+    <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="apps"></ion-icon> ROS2<div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
     </div></li>
 
@@ -151,19 +151,104 @@
 </div>
 </section>
 <br><br>
-<section id="education">
+<section id="education"style="padding: 100px 30px 30px 30px" >
 
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-6" >
+      <div class="jumbotron " style="background-color: #121922;">
+        <h1 class="display-4">My Education</h1>
+        <p class="lead" style="font-size: medium;"></p>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-3 " style=" font-family: Merriweather Sans ;">
+      <div class="card border-secondary mb-3"  style="max-width: 100%; border:none; color: #ffffff ; background-color:#010409;">
+        <div class="card-header">B.Tech Computer Science and System Engineering</div>
+        <div class="card-body text-success bg-dark" >
+          <h5 class="card-title" style="color:#ffffff; opacity:0.5">Kalinga Institute of Industrial Technology(KIIT), Bhubaneshwar, Odisha, India</h5>
+          <p class="card-text">CGPA : 8.24</p>
+        </div>
+    </div>
+  </div>
+  
+  <div class="col-sm-12 col-md-3" style=" font-family: Merriweather Sans ;">
+    <div class="card border-secondary mb-3"  style="max-width: 100%; border:none;color: #ffffff ; background-color:#010409;">
+      <div class="card-header">Class XII- Higher Secondary Education(CBSE)</div>
+      <div class="card-body text-success bg-dark"  >
+        <h5 class="card-title" style="color:#ffffff; opacity:0.5">Kendriya Vidyalaya No.1,<br>Mumbai,<br>Maharashtra,<br> India</h5>
+        <p class="card-text">Percentage: 85%</p>
+      </div>
+  </div>
+</div>
+  </div>
 
-
-
-
+</div>
 
 </section>
 
 
 
+<section id="projects">
 
+  <div class="container">
 
+    <div class="jumbotron " style="background-color: #121922;">
+      <h1 class="display-4">My Projects</h1>
+      <p class="lead" style="font-size: medium;">Get all of them on Github</p>
+    
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 col-md-12" style="padding: 20px 20px 20px 20px;">
+  <div class="card-deck" style="font-family: Merriweather Sans ; color:dodgerblue;">
+    <div class="card" style="border:none ; ">
+      <div class="card-body bg-dark">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div class="card-footer bg-secondary">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card"  style="border: none;"> 
+      <div class="card-body bg-dark">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <div class="card-footer bg-secondary">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-sm-12 col-md-12" style="padding: 20px 20px 20px 20px;" >
+    <div class="card-deck" style="font-family: Merriweather Sans ; color:dodgerblue;">
+
+    <div class="card"  style="border: none;" >
+      <div class="card-body bg-dark">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      </div>
+      <div class="card-footer bg-secondary">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card"  style="border: none;" >
+      <div class="card-body bg-dark">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      </div>
+      <div class="card-footer bg-secondary">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+</section>
 
 
 
