Modified Projects section

--- a/index.html
+++ b/index.html
@@ -203,20 +203,30 @@
   <div class="card-deck" style="font-family: Merriweather Sans ; color:dodgerblue;">
     <div class="card" style="border:none ; ">
       <div class="card-body bg-dark">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title"><ion-icon name="bookmark"></ion-icon> Shivans-Portfolio-Website</h5>
+        <p class="card-text">My Personal Website that showcases my skills and projects</p>
+        <span class="badge badge-secondary">HTML</span>
+        <span class="badge badge-secondary">CSS</span>
+        <span class="badge badge-secondary">JS</span>
+        <span class="badge badge-secondary">Bootstrap</span>
       </div>
-      <div class="card-footer bg-secondary">
-        <small class="text-muted">Last updated 3 mins ago</small>
+      <div class="card-footer bg-secondary" > 
+        <a href="https://github.com/Shivans-Awasthi/Shivans-Portfolio-Website" style="text-decoration: none; padding: 0px 30px 0px 0px ;color:aliceblue;"><ion-icon name="logo-github"></ion-icon><small class="text"> Open on Github</small></a>
+        <a href="#" style="text-decoration: none; color:aliceblue; padding: 0px 30px 0px 0px;"><small class="text">Open Project</small><ion-icon name="arrow-redo"></ion-icon></a>
       </div>
+      
     </div>
     <div class="card"  style="border: none;"> 
       <div class="card-body bg-dark">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title"><ion-icon name="bookmark"></ion-icon>ChatSummation-Text-Summarization-of-conversational-data-using-google-Pegasus-model</h5>
+        <p class="card-text">A tool to summerize conversational data using google pagasus model trained on SamSum dataset</p>
+        <span class="badge badge-secondary">Python</span>
+        <span class="badge badge-secondary">NLP</span>
+        <span class="badge badge-secondary">Transformers</span>
+        <span class="badge badge-secondary">Machine Learning</span>
       </div>
       <div class="card-footer bg-secondary">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <a href="https://github.com/Shivans-Awasthi/ChatSummation-Text-Summarization-of-conversational-data-using-google-Pegasus-model" style="text-decoration: none; color:aliceblue"><ion-icon name="logo-github"></ion-icon><small class="text"> Open on Github</small></a>
       </div>
     </div>
     </div>
@@ -226,20 +236,31 @@
 
     <div class="card"  style="border: none;" >
       <div class="card-body bg-dark">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <h5 class="card-title"><ion-icon name="bookmark"></ion-icon>College-Automation-using-IOT</h5>
+        <p class="card-text">An automation system using ESP32, Wifi, sensors for automatic control of Electric Appliances, Implemented Facial Recognition Attendance system</p>
+        <span class="badge badge-secondary">C++</span>
+        <span class="badge badge-secondary">Arduino IOT Cloud</span>
+        <span class="badge badge-secondary">Python</span>
+        <span class="badge badge-secondary">OpenCV</span>
+        <span class="badge badge-secondary">Google APIs</span>
       </div>
       <div class="card-footer bg-secondary">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <a href="https://github.com/Shivans-Awasthi/College-Automation-using-IOT" style="text-decoration: none; color:aliceblue"><ion-icon name="logo-github"></ion-icon><small class="text"> Open on Github</small></a>
       </div>
     </div>
     <div class="card"  style="border: none;" >
       <div class="card-body bg-dark">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <h5 class="card-title"><ion-icon name="bookmark"></ion-icon>Twitter-Sentiment-Analysis-using-TextBlob</h5>
+        <p class="card-text">Making a simple and efficient Sentiment analyzer to analyze twitter data for different purposes.</p>
+      
+        <span class="badge badge-secondary">Python</span>
+        <span class="badge badge-secondary">NLP</span>
+        <span class="badge badge-secondary">TextBlob</span>
+        <span class="badge badge-secondary">Wordcloud</span>
+        <span class="badge badge-secondary">Matplotlib</span>
       </div>
       <div class="card-footer bg-secondary">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <a href="https://github.com/Shivans-Awasthi/Twitter-Sentiment-Analysis-using-TextBlob" style="text-decoration: none; color:aliceblue"><ion-icon name="logo-github"></ion-icon><small class="text"> Open on Github</small></a>
       </div>
     </div>
     </div>
