--- a/index.html
+++ b/index.html
@@ -46,15 +46,16 @@
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact Me</a>
         </li>
+        
       </ul>
-    </div>
+      </div>
   </nav>
 
 
 <section id="intro">
 <br><br>
 
-<div class="jumbotron jumbotron-fluid" style="background-color: #121922; padding: 50px 20px 20px 0px; ">
+<div class="jumbotron jumbotron-fluid" style="background-color:transparent; padding: 50px 20px 20px 0px; ">
   <div class="container">
 <div class="row">
   <div class="col-sm-12 col-md-5">
@@ -88,8 +89,8 @@
 
 <section id="about">
 
-  <div class="jumbotron " style="background-color: #121922;">
-    <h1 class="display-4">Hello, world!</h1>
+  <div class="jumbotron" style="background-color:transparent ;">
+    <h1 class="display-5">Hello, world! Welcome to my portfolio</h1>
     <p class="lead" style="font-size: medium;">Welcome to my portfolio! I'm Shivans Awasthi, a passionate and driven Computer Science and Systems Engineering graduate from Kalinga Institute of Industrial Technology. With a solid foundation in various programming languages and a knack for problem-solving, I've delved into a spectrum of projects and experiences that span from home automation to advanced robotics and AI.</p>
     <hr class="my-4">
     <p>Still want to know more?</p>
@@ -102,7 +103,7 @@
 </section>
 
 
-
+<br><br>
 <section id="skills">
 
 
@@ -111,10 +112,8 @@
 <div class="row">
 <div class="col-sm-6 col-md-6">
 
-  <!-- <img src="./images/DSC_0754.JPG" alt="Its Me" height="600" width="400" class="rounded"> -->
-<!-- <h1>Skills</h1> -->
 
-<div class="jumbotron " style="background-color: #121922;">
+<div class="jumbotron " style="background-color:transparent;">
   <h1 class="display-4">My Skills</h1>
   <p class="lead" style="font-size: medium;">Here is my diverse skillset</p>
 
@@ -126,19 +125,19 @@
 </div>
 
 
-<div class="col-sm-12 col-md-6" style="background-color: #121922; font-family: Merriweather Sans ;">
+<div class="col-sm-12 col-md-6" style="background-color:transparent; font-family: Merriweather Sans ;">
   <ul class="list-group" >
     <li class="list-group-item" style="background-color:#010409; color:#ffffff; font-size:large;">Technical Skills</li>
-    <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="code-slash"></ion-icon>  C/C++,<ion-icon name="logo-python"></ion-icon>  Python<div class="progress">
-      <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+    <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="code-slash"></ion-icon>  C, C++, Python<div class="progress">
+      <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%" ></div>
     </div></li>
     <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="logo-react"></ion-icon>  MERN Stack<div class="progress">
-      <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+      <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
     </div></li>
     <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="file-tray-stacked"></ion-icon>  PostgreSQL, My SQL<div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
     </div></li>
-    <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="apps"></ion-icon> ROS2<div class="progress">
+    <li class="list-group-item bg-dark" style="color:#ffffff; font-size:large;" ><ion-icon name="apps"></ion-icon> ROS 2, Gazebo Simulator <div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
     </div></li>
 
@@ -150,19 +149,21 @@
 </div>
 </div>
 </section>
+
 <br><br>
+
 <section id="education"style="padding: 100px 30px 30px 30px" >
 
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-6" >
-      <div class="jumbotron " style="background-color: #121922;">
+      <div class="jumbotron " style="background-color:transparent;">
         <h1 class="display-4">My Education</h1>
         <p class="lead" style="font-size: medium;"></p>
       </div>
     </div>
     <div class="col-sm-12 col-md-3 " style=" font-family: Merriweather Sans ;">
-      <div class="card border-secondary mb-3"  style="max-width: 100%; border:none; color: #ffffff ; background-color:#010409;">
+      <div class="card border-secondary mb-3 "  style="max-width: 100%; border:none; color: #ffffff ; background-color:#010409;">
         <div class="card-header">B.Tech Computer Science and System Engineering</div>
         <div class="card-body text-success bg-dark" >
           <h5 class="card-title" style="color:#ffffff; opacity:0.5">Kalinga Institute of Industrial Technology(KIIT), Bhubaneshwar, Odisha, India</h5>
@@ -192,7 +193,7 @@
 
   <div class="container">
 
-    <div class="jumbotron " style="background-color: #121922;">
+    <div class="jumbotron " style="background-color:transparent;">
       <h1 class="display-4">My Projects</h1>
       <p class="lead" style="font-size: medium;">Get all of them on Github</p>
     
@@ -201,16 +202,16 @@
     <div class="row">
       <div class="col-sm-12 col-md-12" style="padding: 20px 20px 10px 20px;">
   <div class="card-deck" style="font-family: Merriweather Sans ; color:dodgerblue;">
-    <div class="card" style="border:none ; ">
+    <div class="card" style="border:none ;  ">
       <div class="card-body bg-dark">
         <h5 class="card-title"><ion-icon name="bookmark"></ion-icon> Shivans-Portfolio-Website</h5>
-        <p class="card-text">My Personal Website that showcases my skills and projects</p>
+        <p class="card-text" >My Personal Website that showcases my skills and projects</p>
         <span class="badge badge-secondary">HTML</span>
         <span class="badge badge-secondary">CSS</span>
         <span class="badge badge-secondary">JS</span>
         <span class="badge badge-secondary">Bootstrap</span>
       </div>
-      <div class="card-footer bg-secondary" > 
+      <div class="card-footer bg-secondary"> 
         <a href="https://github.com/Shivans-Awasthi/Shivans-Portfolio-Website" style="text-decoration: none; padding: 0px 30px 0px 0px ;color:aliceblue;"><ion-icon name="logo-github"></ion-icon><small class="text"> Open on Github</small></a>
         <a href="#" style="text-decoration: none; color:aliceblue; padding: 0px 30px 0px 0px;"><small class="text">Open Project</small><ion-icon name="arrow-redo"></ion-icon></a>
       </div>
@@ -249,6 +250,7 @@
       </div>
     </div>
     <div class="card"  style="border: none;" >
+
       <div class="card-body bg-dark">
         <h5 class="card-title"><ion-icon name="bookmark"></ion-icon>Twitter-Sentiment-Analysis-using-TextBlob</h5>
         <p class="card-text">Making a simple and efficient Sentiment analyzer to analyze twitter data for different purposes.</p>
@@ -300,6 +302,7 @@
                 <div class="col-sm-12 col-md-6 item text" style="padding: 0px 20px 20px 20px ">
                     <h3>Contact Me</h3>
                     <p>Email: shivansa30@gmail.com</p><br>
+                    <p>Lets get started with a new Project!!  Drop me a message below</p><br>
 
                     <form class="needs-validation" novalidate style="font-family: Merriweather Sans ;">
                       <div class="form-row">
