--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                             Looks good!
                           </div>
                         </div>
-                        <h3 style="color: chartreuse;" hidden id="success">Email Sent successfully!</h3>
+                        <h3 style="color: chartreuse;" hidden id="success">Email Sent! I got your message..</h3>
                       </div>
                       <button class="btn btn-primary" type="submit" >Send</button>
                     </form>
